background not showing fixed

--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ body {
 /* conteúdo da página */
 
 #showcase {
-    background: url("/images/showcase.webp") center center/cover;
+    width: 100%;
+    background: url("./images/showcase.webp") center center/cover;
     background-color: rgba(0, 0, 0, 0.4);
     background-blend-mode: color;
     height: 100vh;
@@ -108,6 +109,7 @@ body {
 
 /* footer content */
 #footer {
+    width: 100%;
     background: black;
     color: white;
     padding: 80px 0;
